corner header align fix

--- a/src/scss/four-corners/_corners.scss
+++ b/src/scss/four-corners/_corners.scss
@@ -37,6 +37,7 @@
     &-cell {
       display: table-cell;
       height: 100%;
+      vertical-align: top;
     }
   }
 
